meja/tests/recursive-type.stderr
File "tests/recursive-type.meja", line 11, characters 10-11:
Error: Incompatible types (_, _) and (_, (_, _)):
       The variable _(24719) would have an instance that contains itself.
